[package]
name = "discord_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", default-features = false, features = [
    "serde",
    "clock",
] }
reqwest = { version = "0.11.22", features = [
    "json",
    "cookies",
    "rustls-tls",
    "multipart",
] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
poise = "0.6.1"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.12"
